# Detec-o-de-Fraudes-de-um-Banco

./: README.md  detectar_fraudes.ipynb
detecao_fraude/: pyproject.toml  try_module.py
detecao_fraude/detecao_fraude/: __init__.py  control.py  models.py
detecao_fraude/mlruns/0/: meta.yaml
detecao_fraude/mlruns/0/48ceaa24a8314d9e9c21cf45921c7879/: meta.yaml
detecao_fraude/mlruns/0/48ceaa24a8314d9e9c21cf45921c7879/metrics/: mse
detecao_fraude/mlruns/0/48ceaa24a8314d9e9c21cf45921c7879/tags/: mlflow.log-model.history  mlflow.runName
detecao_fraude/mlruns/0/5379d2b00c3e410ea048e27080fe8b41/: meta.yaml
detecao_fraude/mlruns/0/5379d2b00c3e410ea048e27080fe8b41/metrics/: mse
detecao_fraude/mlruns/0/5379d2b00c3e410ea048e27080fe8b41/tags/: mlflow.log-model.history  mlflow.runName
detecao_fraude/mlruns/0/7643c381d5a74e87a2dfc0513769f5e0/: meta.yaml
detecao_fraude/mlruns/0/7643c381d5a74e87a2dfc0513769f5e0/metrics/: mse
detecao_fraude/mlruns/0/7643c381d5a74e87a2dfc0513769f5e0/tags/: mlflow.log-model.history  mlflow.runName
detecao_fraude/mlruns/0/7c99faffbd114adbbada089168d32a26/: meta.yaml
detecao_fraude/mlruns/0/a13ad13c72ff4e11ae1af30071eb4cb4/: meta.yaml
detecao_fraude/mlruns/0/ae44d7ef0c494358b4c5c97b326770be/: meta.yaml
detecao_fraude/mlruns/0/c311388545924acfb58be5d1cb9307e2/: meta.yaml
detecao_fraude/mlruns/0/e0fce5ea80474c56a54feb9c6cd6b4ba/: meta.yaml
detecao_fraude/mlruns/0/eae603114be34fd89606cb066410cbe0/: meta.yaml
detecao_fraude/mlruns/0/f5099db29b8d4d53a0daacb89ec7c646/: meta.yaml
(+29 files in other folders)
