[tool.poetry]
name = "detecao-fraude"
version = "0.1.0"
description = ""
authors = ["antenoraires <antenoraires37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
